tests/negative/test_decl_bad_type_raw.orb
# TODO rename all test_decl_... to test_sym_...

fnc main () () {
    eval (sym (a:i32 ()));
};